--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is a repository for daily practice with the questions on Leetcode.org.
+This is a repository for daily practice with the exercises on Leetcode.org.
